--- a/app/src/StyleSheet/Create.css
+++ b/app/src/StyleSheet/Create.css
@@ -1,8 +1,9 @@
 /* create new survey form */
 .create {
-  max-width: 450px;
+  max-width: 50%;
   margin: 0 auto;
   text-align: center;
+  padding: 10%;
 }
 .subHeading {
     font-size: 1.2rem;
