--- a/app/src/StyleSheet/Create.css
+++ b/app/src/StyleSheet/Create.css
@@ -3,7 +3,7 @@
   max-width: 50%;
   margin: 0 auto;
   text-align: center;
-  padding: 10%;
+  /* padding: 10%; */
 }
 .subHeading {
     font-size: 1.2rem;
