Add background color, improve layout of survey report page

--- a/app/src/StyleSheet/SurveyReport.css
+++ b/app/src/StyleSheet/SurveyReport.css
@@ -5,4 +5,20 @@
 }
 .showsurveyreport {
     text-align: center;
+    width: 100%;
+}
+.questionreport {
+    text-align: left;
+}
+.questionreport {
+    margin-left: 250px;
+}
+.likert {
+    margin-left: 50px;
+}
+.shortanswer {
+    margin-left: 50px;
+}
+.footer {
+    text-align: center;
 }
